// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/tags/H1 basic H1 1`] = `
.c0 {
  color: #f44336;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <h1
      className="c0"
    >
      Glowing
    </h1>
  </div>
</div>
`;

exports[`Storyshots atoms/tags/H1 emoji H1 1`] = `
.c0 {
  color: #2196f3;
  text-shadow: 0 0 10px #e91e63;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <h1
      className="c0"
    >
      💩🧠🎁🚀
    </h1>
  </div>
</div>
`;
